# trading

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .env.production.example  .env.staging.example  Procfile  README.md  alembic.ini  pyproject.toml  railpack.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260622_01_create_instruments_and_market_bars.py  20260622_02_add_signals_table.py  20260622_03_add_users_and_strategy_combinations.py  20260622_04_add_broker_connections.py  20260623_05_add_backtest_runs_and_trades.py  20260625_06_add_instrument_followed.py  20260625_07_live_signals_and_run_insights.py
backend/app/: main.py
backend/app/core/: config.py  logging.py
backend/tests/: fakes.py  test_auth_and_strategy_combinations.py  test_backtest_concrete_pivots.py  test_backtest_engine.py  test_backtest_export_and_walkforward.py  test_backtest_insight_engine.py  test_backtest_insight_guards.py  test_backtest_recommendation_policy.py  test_backtest_recommendation_values.py  test_backtests_endpoints.py  test_broker_connections_endpoints.py  test_commission_models.py  test_csv_importer.py  test_data_feed_service.py  test_indicator_engine.py  test_market_data_endpoints.py  test_market_scanner_endpoints.py  test_pacing.py  test_realtime_data_endpoints.py  test_realtime_ws.py  test_signals_endpoints.py  test_strategy_engine.py  test_strategy_lookahead.py  test_subscription_manager.py  test_system_endpoints.py
backend/trading_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+138 files in other folders)
